@@ -152,7 +152,7 @@ wills_spaceship_repair-workforce_minute_wage=Workforce wage per minute
 wills_spaceship_repair-starting_debt_ceiling=Starting debt ceiling
 wills_spaceship_repair-profit_target=Profit target
 wills_spaceship_repair-profit_label=Profit label
-wills_spaceship_repair-primary_player_name=Primary player name
+wills_spaceship_repair-primary_player_name=Investment Delivery Pod Target Name
 wills_spaceship_repair-item_delivery_pod_size_cash_values=Item delivery pod size cash values
 wills_spaceship_repair-investment_gui_condensing_minutes=Investment GUI condensing minutes
 
@@ -167,7 +167,7 @@ wills_spaceship_repair-workforce_minute_wage=How much each additional player mus
 wills_spaceship_repair-starting_debt_ceiling=The starting debt ceiling. All investments add their dividend multiplier to this number during the game so it will rise. A change is applied at the time.
 wills_spaceship_repair-profit_target=The amount of profit required to win the game. A change is applied at the time.
 wills_spaceship_repair-profit_label=The label shown in the Status Gui for profit. A change is applied at the time.
-wills_spaceship_repair-primary_player_name=The ingame player name of the primary player. Used to target Item delivery Pods at if that mod is active.
+wills_spaceship_repair-primary_player_name= Only used if the Item Delivery Pods mod is active. If populated the player with that name will be targeted for Investment coin deliveries, otherwise if blank a random online player will be targeted.
 wills_spaceship_repair-item_delivery_pod_size_cash_values=A JSON table of the minimum coin cash value for each delivery pod size to be used in delivery of the instant cash. See readme for details.
 wills_spaceship_repair-investment_gui_condensing_minutes=How many minutes sequential investments will be condesned togeather per player in the investments GUI. Designed to reduce "clutter" of lots of small investments. 0 turns off the feature.
 
